k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: system-service
  labels:
    app: system
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: system
